// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default state 1`] = `
<DocumentFragment>
  <button
    class="btn btn-primary"
    type="button"
  >
    Action
  </button>
</DocumentFragment>
`;

exports[`Render loading state 1`] = `
<DocumentFragment>
  <button
    class="btn btn-primary"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="spinner-border spinner-border-sm"
      role="status"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </button>
</DocumentFragment>
`;
